--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -5,6 +5,7 @@
 .navList {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
