--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -1,18 +1,17 @@
-.input-container {
+.inputContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-bottom: 20px;
 }
 
-.input-label {
+.inputLabel {
     font-family: 'Inria Sans', sans-serif;
     font-size: 16px;
     color: #6C3B1D;
     margin-bottom: 10px;
 }
 
-.input-field {
+.inputField {
     width: 480px;
     height: 40px;
     border: 2px solid #6C3B1D;
@@ -23,9 +22,10 @@
     color: #6C3B1D;
     padding: 10px;
     box-sizing: border-box;
+    margin: 0;
 }
 
-.input-field:focus {
+.inputField:focus {
     outline: none;
     border-color: #845343;
 }
