--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -1,6 +1,6 @@
 .home {
     background-color: #F1F2EC;
-    padding-left: 35px;
+    padding-left: 2%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -9,36 +9,33 @@
 .sale {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin-right: 80px;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 5%;
 }
 
 .new {
     display: flex;
     flex-direction: column;
-    margin-top: auto;
-    margin-bottom: auto;
+    justify-content: center;
+    align-items: center;
+    padding-left: 10%;
 }
 
-.new h1{
+.new h1 {
     font-size: 1.5em;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.sale img {
-    transform: scale(0.8);
 }
 
 .home h1 {
-    margin-bottom: 40px;
+    margin: 0;
+    padding-bottom: 3%;
 }
 
 .books {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    margin-bottom: 5%;
+    padding-bottom: 6%;
 }
 
 .book {
@@ -50,27 +47,29 @@
 }
 
 .book p {
-    margin: 0px;
+    margin: 0;
+    padding-bottom: 7%;
 }
 
-.book-image {
-    margin-bottom: 10px;
+.bookImage {
+    padding-bottom: 7%;
 }
 
-.book-price {
+.bookPrice {
     color: #6C3B1D;
     font-size: 30px;
-    margin-bottom: 10px;
 }
 
-.book-title {
+.bookTitle {
     color: #845343;
     font-size: 18px;
-    margin-bottom: 10px;
 }
 
-.book-author {
+.bookAuthor {
     color: #845343;
     font-size: 13px;
-    margin-bottom: 10px;
+}
+
+.book button {
+    margin-top: 9%;
 }
