--- a/src/global.css
+++ b/src/global.css
@@ -13,3 +13,15 @@ body {
     background-color: #F1F2EC;
 }
    
+h1 {
+    font-family: 'Jura', sans-serif;
+    color: #6C3B1D;
+    font-size: 3.2em;
+    line-height: 1.1;
+}
+
+p {
+    font-family: 'Inria-Sans', sans-serif;
+    color: #6C3B1D;
+    margin: 0;
+}
