--- a/src/global.css
+++ b/src/global.css
@@ -1,14 +1,9 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
-    width: 100%;
     font-family: 'Jura', sans-serif;
 }
-#root {
-    height: 100%;
-    width: 100%;
-}
+
 body {
     background-color: #F1F2EC;
 }
@@ -18,6 +13,7 @@ h1 {
     color: #6C3B1D;
     font-size: 3.2em;
     line-height: 1.1;
+    margin: 0;
 }
 
 p {
