--- a/src/pages/styles/home.module.css
+++ b/src/pages/styles/home.module.css
@@ -14,6 +14,15 @@
     padding-bottom: 5%;
 }
 
+.sale img {
+    transition: box-shadow 0.3s ease;
+    cursor: pointer;
+}
+
+.sale img:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
 .new {
     display: flex;
     flex-direction: column;
